syntax = "proto3";

message SvrRegToSvrReq {
	int32	ServerID	= 1;
	string	ServerName	= 2;
	string	ServerIp	= 3;
	int32	ServerPort	= 4;
	int32   HttpPort    = 5;
}

message SvrRegToSvrAck {
	int32	RetCode	= 1;
	string	NewSvrName	= 2;
}

