syntax = "proto3";
enum MessageRetCode {
   MRC_SUCCESSED										= 0;//成功
   MRC_UNKNOW_ERROR										= 1;//未知错误
   MRC_DISCONNECT										= 2;//连接断开
   MRC_ACCOUNT_EXIST									= 3;//账号己存在
   MRC_NAME_EXIST										= 4;//角色名己存在
   MRC_ACCOUNT_SEALED									= 5;//账号被封禁
   MRC_ACCOUNTISLOGIN									= 6;//账号已经在线
   MRC_ROOM_CREATE_FAILED								= 7;//战斗启动失败
   MRC_NOT_FOUND_ROOM									= 8;//找不到房间	


  //无效的ID
   MRC_INVALID_ACCNAME	= 100;	//无效的密码
   MRC_INVALID_ACCID	= 101;	//无效的密码
   MRC_INVALID_PASSWORD = 102;	//无效的密码
   MRC_INVALID_NAME		= 103;	//无效的名字
   MRC_INVALID_ROLEID	= 104;	//无效的角色ID

}

message ServerPing
{
	uint64 servertime = 1;	
}